# docs/swagger.json
@@ -995,7 +995,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_Orken1119_HelpNet_internal_models.Certificate"
+                            "$ref": "#/definitions/github_com_Orken1119_HelpNet_internal_models.AddingSertificate"
                         }
                     }
                 ],
@@ -1374,6 +1374,14 @@
         }
     },
     "definitions": {
+        "github_com_Orken1119_HelpNet_internal_models.AddingSertificate": {
+            "type": "object",
+            "properties": {
+                "certificate_url": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_Orken1119_HelpNet_internal_models.Certificate": {
             "type": "object",
             "properties": {
