# internal/models/user_model.go
@@ -124,6 +124,10 @@ type ForgotPasswordRequest struct {
 	Email string `json:"email"`
 }
 
+type AddingSertificate struct {
+	ImageUrl string `json:"certificate_url"`
+}
+
 type UserRepository interface {
 	CreateOrganization(c context.Context, request *OrganizationRequest) (int, error)
 	CreateUserVolunteer(c context.Context, request *SignUpRequest) (int, error)
@@ -141,7 +145,7 @@ type UserRepository interface {
 	EditVolunteerProfile(c context.Context, userID int, volunteer VolunteerProfileEditing) error
 	GetAllVolunteers(c context.Context) ([]VolunteerProfile, error)
 
-	AddCertificate(c context.Context, imageUrl []byte, userID int) error
+	AddCertificate(c context.Context, imageUrl string, userID int) error
 	DeleteCertificate(c context.Context, id int) error
 
 	SearchEvent(c context.Context, name string) (*[]Event, error)
